<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/iv_bg"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/background_img"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_img_shadow"
            app:layout_constraintBottom_toBottomOf="@id/iv_bg"
            app:layout_constraintEnd_toEndOf="@id/iv_bg"
            app:layout_constraintStart_toStartOf="@id/iv_bg"
            app:layout_constraintTop_toTopOf="@id/iv_bg" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/back_button_text"
            android:textColor="@color/light_gray"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/back_arrow_image"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_arrow_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="@id/tv_back"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="@id/tv_back"
            app:tint="@color/light_gray" />

        <TextView
            android:id="@+id/age_limit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/age_limit_bg"
            android:gravity="center"
            android:text="@string/age_limit"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/movie_name_text"
            app:layout_constraintStart_toEndOf="@id/guideline_start" />

        <TextView
            android:id="@+id/movie_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="254dp"
            android:text="@string/movie_name"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="@id/iv_bg" />

        <TextView
            android:id="@+id/movie_genre_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/movie_genre"
            android:textColor="@color/pink"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/movie_name_text" />

        <ImageView
            android:id="@+id/iv_star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@id/movie_reviews_text"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="@id/movie_reviews_text" />

        <ImageView
            android:id="@+id/iv_star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@id/iv_star1"
            app:layout_constraintStart_toEndOf="@id/iv_star1" />

        <ImageView
            android:id="@+id/iv_star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@id/iv_star1"
            app:layout_constraintStart_toEndOf="@id/iv_star2" />

        <ImageView
            android:id="@+id/iv_star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@id/iv_star1"
            app:layout_constraintStart_toEndOf="@id/iv_star3" />

        <ImageView
            android:id="@+id/iv_star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@id/iv_star1"
            app:layout_constraintStart_toEndOf="@id/iv_star4"
            app:tint="@color/light_gray" />

        <TextView
            android:id="@+id/movie_reviews_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/movie_reviews"
            android:textColor="@color/light_gray"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/iv_star5"
            app:layout_constraintTop_toBottomOf="@id/movie_genre_text" />

        <TextView
            android:id="@+id/tv_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/storyline_title_text"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/movie_reviews_text" />

        <TextView
            android:id="@+id/tv_movie_annotation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/movie_annotation"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_storyline" />

        <TextView
            android:id="@+id/cast_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/cast_title_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_annotation" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actors_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/cast_title_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>