<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_card_view"
    android:layout_width="match_parent"
    android:layout_height="296dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/card_background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/movie_card_guideline_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="6dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/movie_card_guideline_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="6dp" />

        <ImageView
            android:id="@+id/movie_card_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/movie_card_img"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_img_shadow"
            app:layout_constraintBottom_toBottomOf="@id/movie_card_image"
            app:layout_constraintEnd_toEndOf="@id/movie_card_image"
            app:layout_constraintStart_toStartOf="@id/movie_card_image"
            app:layout_constraintTop_toTopOf="@id/movie_card_image" />

        <TextView
            android:id="@+id/age_limit_text"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/age_limit_rounded_rectangle"
            android:gravity="center"
            android:text="@string/age_limit"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/movie_card_guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/like_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_favorite_24"
            app:layout_constraintBottom_toBottomOf="@id/age_limit_text"
            app:layout_constraintEnd_toStartOf="@id/movie_card_guideline_end"
            app:layout_constraintTop_toTopOf="@id/age_limit_text" />

        <TextView
            android:id="@+id/movie_genre_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_genre"
            android:textColor="@color/pink"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/movie_card_reviews_text"
            app:layout_constraintEnd_toStartOf="@id/movie_card_guideline_end"
            app:layout_constraintStart_toEndOf="@id/movie_card_guideline_start" />

        <ImageView
            android:id="@+id/rating_star_1_image"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@id/movie_card_reviews_text"
            app:layout_constraintStart_toEndOf="@id/movie_card_guideline_start"
            app:layout_constraintTop_toTopOf="@id/movie_card_reviews_text" />

        <ImageView
            android:id="@+id/rating_star_2_image"
            android:layout_width="8dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@id/rating_star_1_image"
            app:layout_constraintStart_toEndOf="@id/rating_star_1_image"
            app:layout_constraintTop_toTopOf="@id/rating_star_1_image" />

        <ImageView
            android:id="@+id/rating_star_3_image"
            android:layout_width="8dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@id/rating_star_1_image"
            app:layout_constraintStart_toEndOf="@id/rating_star_2_image"
            app:layout_constraintTop_toTopOf="@id/rating_star_1_image" />

        <ImageView
            android:id="@+id/rating_star_4_image"
            android:layout_width="8dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@id/rating_star_1_image"
            app:layout_constraintStart_toEndOf="@id/rating_star_3_image"
            app:layout_constraintTop_toTopOf="@id/rating_star_1_image" />

        <ImageView
            android:id="@+id/rating_star_5_image"
            android:layout_width="8dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@id/rating_star_1_image"
            app:layout_constraintStart_toEndOf="@id/rating_star_4_image"
            app:layout_constraintTop_toTopOf="@id/rating_star_1_image"
            app:tint="@color/light_gray" />

        <TextView
            android:id="@+id/movie_card_reviews_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:text="@string/movie_reviews"
            android:textColor="@color/light_gray"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/movie_card_image"
            app:layout_constraintEnd_toStartOf="@id/movie_card_guideline_end"
            app:layout_constraintStart_toEndOf="@id/rating_star_5_image" />

        <TextView
            android:id="@+id/movie_card_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/movie_card_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/movie_card_guideline_end"
            app:layout_constraintStart_toEndOf="@id/movie_card_guideline_start"
            app:layout_constraintTop_toBottomOf="@id/movie_card_image" />

        <TextView
            android:id="@+id/movie_length"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_length"
            android:textColor="@color/light_gray"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/movie_card_guideline_end"
            app:layout_constraintStart_toEndOf="@id/movie_card_guideline_start"
            app:layout_constraintTop_toBottomOf="@id/movie_card_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>